[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "updater"
version = "0.1.0"
description = "updater"
authors = [{ name = "Faticc", email = "komeristyj07@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["tqdm", "requests"]

[project.urls]
Homepage = "https://github.com/Faticc/updater"
